# GoIT_2

./: pyproject.toml
3/: factorize.py  sort_folders_flow.py
5/: main.py
