[tool.poetry]
name = "3"
version = "0.1.0"
description = ""
authors = ["Serhii <90449769+Serhii-Olkhovskyi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
